--- a/app/(privat routes)/profile/ProfilePage.module.css
+++ b/app/(privat routes)/profile/ProfilePage.module.css
@@ -1,5 +1,18 @@
 .container {
-  max-width: 644px;
-  padding: 32px;
-  margin: auto;
+  max-width: 375px;
+  padding: 20px;
+  margin: 68px auto 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding: 32px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    max-width: 644px;
+  }
 }
