--- a/components/ProfileEditForm/ProfileEditForm.module.css
+++ b/components/ProfileEditForm/ProfileEditForm.module.css
@@ -27,3 +27,17 @@
   font-weight: 400;
   font-size: 16px;
 }
+
+.buttons_container{
+    display: flex;
+    gap: 16px;
+}
+
+.button_cancel {
+    max-width: 159.5px;
+  background-color: transparent;
+  border: none;
+  color: var(--color-neutral-dark);
+  font-size: 16px;
+  cursor: pointer;
+}
