--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -1,21 +1,37 @@
-.header {
+/* .header {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 68px;
+  height: 28px;
   background-color: #fff;
   z-index: 999;
-}
+} */
 
 @media only screen and (min-width: 768px) {
   .header {
-  height: 68px;
+    height: 68px;
   }
 }
 
 @media only screen and (min-width: 1440px) {
   .header {
-  height: 100%;
-  max-width: 312px;
+    height: 100%;
+    max-width: 312px;
+  }
 }
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 24px;
+  padding: 12px;
+  /* border-block-end: 1px solid #ccc; */
+}
+
+.navigation {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 12px;
+  list-style-type: none;
 }
