--- a/components/JourneyDetails/JourneyDetails.module.css
+++ b/components/JourneyDetails/JourneyDetails.module.css
@@ -55,7 +55,7 @@
 }
 
 /* base reset */
-h1,
+/* h1,
 h2,
 h3,
 h4,
@@ -67,16 +67,16 @@ ol {
   margin: 0;
   padding: 0;
   list-style-type: none;
-}
+} */
 
-a {
+/* a {
   text-decoration: none;
 }
 
 body {
   font-family: 'Montserrat', sans-serif;
   background-color: var(--primary-bg);
-}
+} */
 
 /* *,
 *::before,
@@ -192,21 +192,21 @@ body {
   color: var(--color-scheme-text);
 }
 
-.baby-interest-fact {
+.babyInterestFact {
   border-radius: 12px;
   padding: 12px;
   background: var(--color-scheme-foreground-alt);
 }
 
-.baby-interest-fact-title,
-.advice-comfort-title {
+.babyInterestFactTitle,
+.adviceComfortTitle {
   display: flex;
   align-items: center;
   gap: 8px;
   margin-bottom: 8px;
 }
 
-.baby-interest-fact-logo {
+.babyInterestFactLogo {
   display: flex;
   gap: 8px;
   font-weight: 700;
@@ -216,11 +216,10 @@ body {
 }
 
 /* Тіло мами */
-.mom-content {
+.momContent {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
   align-items: flex-start;
   gap: 24px;
   width: 1064px;
@@ -228,15 +227,14 @@ body {
   margin: 0 auto;
 }
 
-.mom-content-left {
-  flex: 1;
+.momContentLeft {
   display: flex;
   flex-direction: column;
   gap: 24px;
 }
 
-.fillings-block,
-.comfort-block {
+.fillingsBlock,
+.comfortBlock {
   display: flex;
   flex-direction: column;
   gap: 8px;
@@ -246,18 +244,21 @@ body {
   /* width: 100%; */
   background: var(--color-scheme-foreground);
 }
-.comfort-block {
+.comfortBlock {
   margin-bottom: 0;
 }
 
-.feelings-list {
+.feelingsList {
   display: flex;
   gap: 8px;
   flex-wrap: wrap;
   margin-bottom: 8px;
 }
 
-.fillings-item {
+.feelingsTitle {
+}
+
+.fillingsItem {
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -267,12 +268,11 @@ body {
   background: var(--opacity-neutral-darkest-5);
 }
 
-.tasks-component {
+.tasksComponent {
   padding: 24px;
   border-radius: 32px;
   border: 0px solid var(--color-scheme-border);
   width: 390px;
   height: 498px;
   background: var(--color-scheme-foreground-alt);
-  flex-shrink: 0;
 }
