--- a/components/HeaderFooter/HeaderFooter.module.css
+++ b/components/HeaderFooter/HeaderFooter.module.css
@@ -10,6 +10,7 @@
   gap: 16px;
   border-top: 1px solid rgba(0, 0, 0, 0.15);
   padding-top: 16px;
+  align-items: center;
 }
 .sign_link_modal {
   background: #ffdae0;
