--- a/components/FeelingCheckCard/FeelingCheckCard.module.css
+++ b/components/FeelingCheckCard/FeelingCheckCard.module.css
@@ -1,4 +1,5 @@
 .feelingCheckCard {
+  margin-top: 32px;
   border-radius: 32px;
   width: 335px;
   height: 193px;
@@ -58,4 +59,9 @@
   height: 42px;
   background: #ffdae0;
   cursor: pointer;
+  font-family: 'Lato', sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 160%;
+  color: #000;
 }
