--- a/components/UserBar/UserBar.module.css
+++ b/components/UserBar/UserBar.module.css
@@ -7,6 +7,7 @@
   padding-bottom: 24px;
   margin-top: auto;
 }
+
 .avatar {
   align-items: center;
   justify-content: flex-start;
@@ -17,6 +18,7 @@
   width: 40px;
   height: 40px;
 }
+
 .name {
   font-family: 'Lato', sans-serif;
   font-weight: 500;
@@ -25,6 +27,7 @@
   line-height: 1.6;
   color: #000;
 }
+
 .email {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
@@ -33,10 +36,23 @@
   line-height: 1.6;
   color: #000;
 }
+
+.logoutBtn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover {
+    transform: scale(1.5);
+  }
+}
+
 @media (min-width: 1440px) {
   .name {
     font-size: 14px;
   }
+
   .email {
     font-size: 14px;
   }
